# AgedCare

./: .gitignore  Deteriorating Resident Index (DRI) convert to md.docx.md  InitialTask.md  load_dri_additional.py  load_dri_config.py  snapshot.txt  test_regex.py  verify_regex_detection.py
dri-intelligence/: AGENTS.md  README.md  environment.yml  load_demo_data.py  pyproject.toml  requirements.txt  setup_ai_observability.sql  setup_database.py  snowflake.yml  streamlit_app.py
dri-intelligence/_trash_old_pages/: batch_testing.py  prompt_engineering.py  quality_metrics.py
dri-intelligence/_trash_old_pages/pages_emoji_style/: 2_🔬_Prompt_Engineering.py  4_📈_Analysis_Results.py  5_⚙️_Configuration.py  6_🔄_Claude_vs_Regex_Comparison.py
dri-intelligence/app_pages/: __init__.py  analysis_results.py  audit_results.py  batch_testing.py  comparison.py  configuration.py  dashboard.py  feedback_loop.py  prompt_engineering.py  quality_metrics.py  resident_history.py  review_queue.py  testing_tools.py
dri-intelligence/deployment/: user_role_setup.sql
dri-intelligence/evaluation_job/: Dockerfile  README.md  entrypoint.sh  evaluate_dri.py  job-run-spec.yaml  job-spec.yaml  requirements.txt  setup_evaluation_job.sql
dri-intelligence/output/bundle/streamlit/dri_intelligence/: environment.yml  (+2 more)
dri-intelligence/pages/: 1_📊_Dashboard.py  2_🔬_Prompt_Engineering.py  3_📋_Review_Queue.py  4_📈_Analysis_Results.py  5_⚙️_Configuration.py  6_🔄_Claude_vs_Regex_Comparison.py  7_🧪_Batch_Testing.py
dri-intelligence/src/: ai_observability.py  connection_helper.py  dri_analysis.py
(+48 files in other folders)
