[project]
name = "dri-intelligence"
version = "1.0.0"
description = "DRI Intelligence - AI-powered clinical analysis for aged care"
requires-python = "==3.11.*"
dependencies = [
    "streamlit>=1.50.0",
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
    "snowflake-snowpark-python>=1.0.0",
]

[tool.uv]
prerelease = "if-necessary-or-explicit"

# TruLens dependencies for AI Observability (requires custom container due to heavy deps)
# trulens-core>=2.1.2
# trulens-connectors-snowflake>=2.1.2
# trulens-providers-cortex>=2.1.2  # pulls in snowflake-ml-python, xgboost, scipy (~200MB)
